fix the spacing between the game title and the margin that was making it less visible

--- a/src/styles/GameDetail.module.css
+++ b/src/styles/GameDetail.module.css
@@ -7,12 +7,10 @@
 .gameName {
   display: flex;
   margin-top: 1rem;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
 }
-
 .gameName h2 {
-  margin-left: auto;
   font-size: 1.2rem;
 }
 .imgslider {
